# ExoMy_Model

docker/: docker-compose.yaml
exomy_model/: CMakeLists.txt  package.xml
exomy_model/exomy_sim/: CMakeLists.txt  package.xml
exomy_model/exomy_sim/src/: joint_command_node.cpp
exomy_model/exomy_sim_msgs/: package.xml
exomy_model/launch/: simulation.launch
exomy_model/rover_gazebo_plugins/: CMakeLists.txt
exomy_model/rover_gazebo_plugins/src/: rover_gazebo_joint_plugin.cpp
exomy_model/src/: joint_command_node.cpp
exomy_sim_launch/launch/: simulationModified.launch.py
